--- a/css/position.css
+++ b/css/position.css
@@ -1,3 +1,13 @@
+@font-face{
+    font-family: "Cooper-Hewitt-ThinItalic";
+    src: url("../assets/CooperHewitt-ThinItalic.otf") format("truetype");
+  }
+
+@font-face{
+    font-family: "Cooper-Hewitt";
+    src: url("../assets/Cooper-Hewitt.ttf") format("truetype");
+}
+
 body{
     background-color: black;
 }.topgraphic{
@@ -6,15 +16,31 @@ body{
     
 }
 
-#heading{
+h1{
+    font-family: Cooper-Hewitt;
+}
+
+.cursive{
+    font-family: Cooper-Hewitt-ThinItalic;
+}
+.heading{
     /* bottom: 0; */
     /* float: bottom; */
+    text-align: left;
+    font-size: 30px;;
     margin-left: 10px;
     z-index: -1;
     margin-left: 20px;
     color: white;
-    font-family: sans-serif;
+
     padding-bottom: 50px;
 
 }
 
+#subtitle{
+    font-weight: 20pt;
+}
+
+#quote{
+    float: right;
+}
