--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,63 @@
-body {
-    color: white;
+@font-face{
+    font-family: "Cooper-Hewitt-ThinItalic";
+    src: url("../assets/CooperHewitt-ThinItalic.otf") format("truetype");
+  }
+
+@font-face{
+    font-family: "Cooper-Hewitt";
+    src: url("../assets/Cooper-Hewitt.ttf") format("truetype");
 }
+
+
+
+
+body{
+    color: white;
+    background-color: black;
+    font-family: Cooper-Hewitt;
+
+}.topgraphic{
+    top: 0;
+    position: absolute;
+    
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+}
+
+#q1, #q2, #q3, #q4{
+    width: 25%;
+}
+
+
+p{
+    font-family: Cooper-Hewitt-ThinItalic;
+}
+
+.cursive{
+    font-family: Cooper-Hewitt-ThinItalic;
+}
+.heading{
+    /* bottom: 0; */
+    /* float: bottom; */
+    text-align: left;
+    font-size: 30px;;
+    margin-left: 10px;
+    z-index: -1;
+    margin-left: 20px;
+    color: white;
+
+    padding-bottom: 50px;
+
+}
+
+#subtitle{
+    font-weight: 20pt;
+}
+
+#quote{
+    float: right;
+}
+
