--- a/css/position.css
+++ b/css/position.css
@@ -10,14 +10,19 @@
 
 body{
     background-color: black;
+    font-family: Cooper-Hewitt;
+
 }.topgraphic{
     top: 0;
     position: absolute;
     
 }
 
-h1,p{
+li a{
     font-family: Cooper-Hewitt;
+}
+p{
+    font-family: Cooper-Hewitt-ThinItalic;
 }
 
 .cursive{
