--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,9 @@
 
 body{
     color: white;
-    background-color: black;
+    background-color: #191919;
     font-family: Cooper-Hewitt;
+    margin-left: 10px;
 
 }.topgraphic{
     top: 0;
@@ -44,7 +45,7 @@ p{
     /* float: bottom; */
     text-align: left;
     font-size: 30px;;
-    margin-left: 10px;
+    
     z-index: -1;
     margin-left: 20px;
     color: white;
