--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,46 @@
     src: url("../assets/CooperHewitt-ThinItalic.otf") format("truetype");
   }
 
+  @font-face{
+    font-family: "Cooper-Hewitt-Book";
+    src: url("../assets/CooperHewitt-Book.otf") format("truetype");
+  }
+
+  @font-face{
+    font-family: "Cooper-Hewitt-Bold";
+    src: url("../assets/CooperHewitt-Bold.otf") format("truetype");
+  }
 @font-face{
     font-family: "Cooper-Hewitt";
     src: url("../assets/Cooper-Hewitt.ttf") format("truetype");
 }
 
+/* Fonts */
+.book{
+    font-family: Cooper-Hewitt-ThinItalic;
+}
 
+.cursive{
+    font-family: Cooper-Hewitt-ThinItalic;
+}
+
+.bold{
+    font-family: Cooper-Hewitt-Bold;
+}
+
+#intro{
+    font-size: 100px;
+    position: relative;
+  width: 500px;
+  margin: 0 auto;
+}
 
 
 body{
     color: white;
     background-color: #191919;
-    font-family: Cooper-Hewitt;
-    margin-left: 10px;
+    font-family: Cooper-Hewitt-ThinItalic;
+    margin-left: 20px;
 
 }.topgraphic{
     top: 0;
@@ -30,24 +57,23 @@ body{
 
 #q1, #q2, #q3, #q4{
     width: 25%;
+    font-family: Cooper-Hewitt-Bold;
 }
 
 
 p{
     font-family: Cooper-Hewitt-ThinItalic;
+    font-size: 14pt;
+
 }
 
-.cursive{
-    font-family: Cooper-Hewitt-ThinItalic;
-}
+
 .heading{
     /* bottom: 0; */
     /* float: bottom; */
     text-align: left;
     font-size: 30px;;
-    
-    z-index: -1;
-    margin-left: 20px;
+    font-family: Cooper-Hewitt-Bold;
     color: white;
 
     padding-bottom: 50px;
