--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 /* Fonts */
 .book{
-    font-family: Cooper-Hewitt-ThinItalic;
+    font-family: Attic Antique Regula;
 }
 
 .cursive{
@@ -42,8 +42,29 @@ body{
     color: white;
     background-color: #191919;
     font-family: Cooper-Hewitt-ThinItalic;
+    
 
-}.topgraphic{
+
+}
+
+.flex{
+    display: flex;
+    flex-direction: horizontal;
+}
+.news{
+    background-color: #f5f5f5;
+    max-width: 50%;
+    color: #191919;
+    padding: 15px;
+    margin: 20px;
+    
+}
+
+.blob{
+    background-color: #f5f5f5;
+        border-radius: 60% 40% 40% 20%;
+}
+.topgraphic{
     top: 0;
     position: absolute;
     
