--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 
 body{
     color: white;
-    background-color: #191919;
+    background-color: black;
     font-family: Cooper-Hewitt-ThinItalic;
     
 
@@ -63,6 +63,8 @@ body{
 .blob{
     background-color: #f5f5f5;
         border-radius: 60% 40% 40% 20%;
+        background-blend-mode: multiply;
+    color: #191919;
 }
 .topgraphic{
     top: 0;
