--- a/styles/scss/clock.scss
+++ b/styles/scss/clock.scss
@@ -9,7 +9,7 @@ $size: 350px;
     justify-content: center;
     align-items: center;
     &__outline {
-        // box-shadow: 12px 3px 6px 3px #cc99a2;
+        // box-shadow: 12px 3px 6px 3px g.$hotpink;
         height: $size;
         width: $size;
         border: 3px solid g.$pink;
