--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -5,7 +5,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "CooperHewitt";
+  font-family: "CooperHewittBold";
   src: url("../../assets/CooperHewitt-Bold.otf") format("truetype");
   font-weight: 700;
   font-style: normal;
@@ -22,9 +22,24 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.intro{
+  position: absolute;
+}
+
+.glitch-container{
+  float: right;
+  margin-top: 380px;
+  margin-right: 100px;
+}
 .book {
   font-family: "CooperHewittBook";
 }
+
+.bold{
+  font-family: "CooperHewittBold";
+}
+
 
 .cursive {
   font-family: "CooperHewitt";
@@ -38,7 +53,9 @@
   width: 60%;
   margin-left: 20px;
   margin: 0 auto;
+  margin-top: -100px;
 }
+
 
 body {
   font-family: "CooperHewitt";
@@ -53,19 +70,19 @@ body {
   flex-direction: horizontal;
 }
 
-.news {
-  background-color: #f5f5f5;
-  max-width: 50%;
-  color: #191919;
-  padding: 15px;
-  margin: 20px;
-}
 
-.blob {
-  background-color: #f5f5f5;
-  border-radius: 60% 40% 40% 20%;
-}
 
+.grid{
+  max-width: 100%;
+  max-height: 100%;
+  z-index: -3;
+ 
+}
+#concept{
+  max-width: 100%;
+  z-index: 1;
+  position: absolute;
+}
 .topgraphic {
   top: 0;
   position: absolute;
@@ -115,7 +132,7 @@ p {
 }
 
 #questionnaire {
-  margin-top: -3px;
+  margin-top: 60px;
   margin-bottom: 10em;
 }
 #questionnaire .top {
