--- a/styles/scss/page.scss
+++ b/styles/scss/page.scss
@@ -11,11 +11,12 @@
 
 
 #intro {
-    font-size: 100px;
-    position: relative;
-    width: 60%;
-    margin-left: 20px;
-     margin: 0 auto;
+
+    //font-size: 100px;
+    //position: relative;
+    //width: 60%;
+    //margin-left: 20px;
+    // margin: 0 auto;
 }
 
 body {
