--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -22,6 +22,26 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Newspaper";
+  src: url("../../assets/OldNewspaperTypes.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+html {
+  scroll-behavior: smooth;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.scroll-outer {
+  overflow: hidden;
+}
+
 .book {
   font-family: "CooperHewittBook";
 }
@@ -30,6 +50,42 @@
   font-family: "CooperHewitt";
   font-weight: 200;
   font-style: italic;
+}
+
+#notes-section {
+  border: 1px solid red;
+  background-image: url("../../img/grid.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+#notes-section .top {
+  display: flex;
+  justify-content: center;
+  margin-top: 2em;
+  margin-bottom: 3em;
+}
+#notes-section .top #concept {
+  max-width: 40%;
+  z-index: 1;
+}
+#notes-section .notes-text {
+  background-image: url("../../img/notes-background.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  width: 75vw;
+  color: black;
+  margin: 0 auto;
+  overflow-y: scroll;
+}
+#notes-section .notes-text .text p {
+  margin: 1.5em 2em 0 2.8em;
+  font-family: "Newspaper" !important;
+  font-style: normal !important;
 }
 
 body {
@@ -63,8 +119,20 @@ body {
   position: absolute;
 }
 
+.y.mandatory-scroll-snapping {
+  scroll-snap-type: y mandatory;
+  overflow: scroll;
+}
+
 .notcanvas {
-  margin-left: 20px;
+  height: 100%;
+  width: 100%;
+}
+
+.section {
+  height: 100vh;
+  width: 100vw;
+  scroll-snap-align: center;
 }
 
 .row {
@@ -86,18 +154,6 @@ p {
   font-size: 14pt;
 }
 
-.heading {
-  /* bottom: 0; */
-  /* float: bottom; */
-  font-family: "CooperHewitt";
-  font-weight: 700;
-  font-style: normal;
-  text-align: left;
-  font-size: 30px;
-  color: white;
-  padding-bottom: 50px;
-}
-
 #subtitle {
   font-weight: 20pt;
 }
@@ -106,54 +162,71 @@ p {
   float: right;
 }
 
-#questionnaire {
-  margin-top: -3px;
-  margin-bottom: 10em;
+#questionnaire-intro {
+  border: 1px solid yellow;
+  font-family: "CooperHewitt";
+  font-weight: 700;
+  font-style: normal;
+  text-align: left;
+  font-size: 30px;
+  color: white;
+  padding-bottom: 50px;
 }
-#questionnaire .top {
+#questionnaire-intro .top {
   display: flex;
   align-items: baseline;
 }
-#questionnaire .top #start {
+#questionnaire-intro .top #start {
   margin-left: 1em;
   text-decoration: underline;
   color: #ff3377;
   letter-spacing: 1px;
 }
-#questionnaire .top #start:hover {
+#questionnaire-intro .top #start:hover {
   cursor: pointer;
 }
-#questionnaire .leadin {
+#questionnaire-intro .quote {
+  margin: 2em;
+}
+#questionnaire-intro .leadin {
   display: none;
 }
-#questionnaire .container {
+
+#questionnaire-section {
+  display: flex;
+  border: 1px solid blue;
+  margin-top: -3px;
+}
+#questionnaire-section .container {
   width: 85%;
   min-height: 60vh;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
 }
-#questionnaire .container .questions-left, #questionnaire .container .questions-right {
+#questionnaire-section .container .questions-left, #questionnaire-section .container .questions-right {
   width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 80%;
+  align-self: center;
 }
-#questionnaire .container .clock-section {
+#questionnaire-section .container .clock-section {
   width: 40%;
 }
-#questionnaire .question-section {
+#questionnaire-section .question-section {
   display: none;
   text-align: center;
 }
-#questionnaire .question-section .statement {
+#questionnaire-section .question-section .statement {
   font-family: "CooperHewitt";
   font-weight: 700;
   font-style: normal;
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
-#questionnaire .question-section .question-section:first-of-type {
+#questionnaire-section .question-section .question-section:first-of-type {
   margin-bottom: 1em;
 }
 
